test/scripted/compilation2/errors/no_field.bnj
# test:subtest
# test:error 11:9 "struct 'Point' has no field named 'a'"

struct Point {
    var x: i32;
    var y: i32;
}

func main() {
    var point = Point {
        a: 2,
    };
}

# test:subtest
# test:error 25:9 "struct 'Point' has no field named 'a'"

struct Point {
    var x: i32;
    var y: i32;
}

func main() {
    var point: Point = {
        a: 2,
    };
}

# test:subtest
# test:error 40:9 "struct 'Point' has no field named 'a'"
# test:error 41:9 "struct 'Point' has no field named 'b'"

struct Point {
    var x: i32;
    var y: i32;
}

func main() {
    var point = Point {
        a: 2,
        b: 3
    };
}

# test:subtest
# test:error 59:11 "struct 'Point' has no field named 'a'"

struct Point {
    var x: i32;
    var y: i32;
}

func main() {
    var point = Point {
        x: 2,
        y: 3,
    };
    
    point.a = 2;
}

# test:subtest
# test:error 77:13 "struct 'Point' has no field named 'a'"

struct Point {
    var x: i32;
    var y: i32;
}

func main() {
    var point = Point {
        x: 2,
        y: 3,
    };
    
    var pointer = &point;
    pointer.a = 2;
}

# test:subtest
# test:error 90:15 "union case 'A' has no field named 'test'"

union U {
    case A(a: i32);
    case B(b: i32);
}

func main() {
    var a = U.A(0);
    var b = a.test;
}

# test:subtest
# test:error 99:15 "tuple '(i32, bool)' has no field named '2'"
# test:error 100:15 "tuple '(i32, bool)' has no field named '3'"

func main() {
    var a = (5, true);
    var b = a.2;
    var c = a.3;
}

# test:subtest
# test:error 108:15 "tuple '(i32, bool)' has no field named 'test'"

func main() {
    var a = (5, true);
    var b = a.test;
}